--- a/SASS/package.json
+++ b/SASS/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.1.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.6.0"
   }
 }
